adding adding about page and basic nav with home page

--- a/app/assets/javascripts/javascript_web_client.js.coffee.erb
+++ b/app/assets/javascripts/javascript_web_client.js.coffee.erb
@@ -2,5 +2,6 @@
   .config ['$routeProvider', ($routeProvider) ->
     $routeProvider
       .when('/', controller: 'HomeCtrl', templateUrl: <%= asset_path('home.html').to_json %>)
+      .when('/about', templateUrl: <%= asset_path('about.html').to_json %>)
       .otherwise(redirectTo: '/')
   ]
