upgrading deps. rails 4.0. angular 1.2.

--- a/app/assets/javascripts/javascript_web_client.js.coffee.erb
+++ b/app/assets/javascripts/javascript_web_client.js.coffee.erb
@@ -1,4 +1,4 @@
-@angular.JavascriptWebClient = @angular.module('angular.JavascriptWebClient', [])
+@angular.JavascriptWebClient = @angular.module('angular.JavascriptWebClient', ['ngRoute'])
   .config ['$routeProvider', ($routeProvider) ->
     $routeProvider
       .when('/', controller: 'HomeCtrl', templateUrl: <%= asset_path('home.html').to_json %>)
